--- a/assets/error.html
+++ b/assets/error.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 | Page Not Found</title>
 
-    <script src="https://su.dunite.tech/assets/script/navbar.js"></script>
-    <link rel="shortcut icon" type="image/png" sizes="16x16" href="https://dunite.tech/assets/favicon/android-chrome-192x192.png">
+    <script src="https://dunite.tech/assets/script/navbar.js"></script>
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="https://blog.dunite.tech/assets/favicon/android-chrome-192x192.png">
     <link rel="stylesheet" href="./assets/style/scrollbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Google tag (gtag.js) -->
@@ -24,33 +24,33 @@
 <body>
     <nav class="navbar bg-body-tertiary fs-5">
     <div class="container d-flex flex-row ">
-        <a class="navbar-brand" href="/">
-            <img src="https://su.dunite.tech/assets/svg/logo.png" alt="Logo" width="40" height="40"> SU Study Materials
+        <a class="navbar-brand" href="https://dunite.tech">
+            <img src="https://dunite.tech/assets/svg/logo.png" alt="Logo" width="40" height="40"> SU Study Materials
         </a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://su.dunite.tech/pages/about.php">About</a>
+                <a class="nav-link active" aria-current="page" href="https://dunite.tech/pages/about.php">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://su.dunite.tech/pages/bca.php">BCA</a>
+                <a class="nav-link" href="https://dunite.tech/pages/bca.php">BCA</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link user-login" href="https://su.dunite.tech/pages/mca.php">MCA</a>
+                <a class="nav-link user-login" href="https://dunite.tech/pages/mca.php">MCA</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link user-login" href="https://su.dunite.tech/pages/ethical-hacking.php">EH Course</a>
+                <a class="nav-link user-login" href="https://dunite.tech/pages/ethical-hacking.php">EH Course</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link user-login" href="https://su.dunite.tech/pages/ibm.php">IBM</a>
+                <a class="nav-link user-login" href="https://dunite.tech/pages/ibm.php">IBM</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link user-login" href="https://su.dunite.tech/pages/upload.php">Upload</a>
+                <a class="nav-link user-login" href="https://dunite.tech/pages/upload.php">Upload</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active p-2 py-1 mt-1" aria-current="page" href="https://su.dunite.tech/pages/compiler.php" style="border: 1px solid black; border-radius: 7px;">Compiler</a>
+                <a class="nav-link active p-2 py-1 mt-1" aria-current="page" href="https://dunite.tech/pages/compiler.php" style="border: 1px solid black; border-radius: 7px;">Compiler</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link userShow" href="https://su.dunite.tech/assets/pages/user.html" aria-disabled="true"></a>
+                <a class="nav-link userShow" href="https://dunite.tech/assets/pages/user.html" aria-disabled="true"></a>
             </li>
         </ul>
         <button class="btn btn-outline-dark navbtntoggle" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" style="display: none;" aria-controls="offcanvasExample">
@@ -60,7 +60,7 @@
 
     <div class="offcanvas offcanvas-start " tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand" href="/">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand" href="https://dunite.tech">
                     <img src="https://dunite.tech/assets/favicon/android-chrome-512x512.png?v=1704904973" alt="Bootstrap" width="30" height="24"> SU Study Materials
                 </a></h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -68,31 +68,31 @@
         <div class="offcanvas-body">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://su.dunite.tech">Home</a>
+                    <a class="nav-link active" aria-current="page" href="https://dunite.tech">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://su.dunite.tech/pages/about.php">About</a>
+                    <a class="nav-link active" aria-current="page" href="https://dunite.tech/pages/about.php">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://su.dunite.tech/pages/bca.php">BCA</a>
+                    <a class="nav-link" href="https://dunite.tech/pages/bca.php">BCA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link user-login" href="https://su.dunite.tech/pages/mca.php">MCA</a>
+                    <a class="nav-link user-login" href="https://dunite.tech/pages/mca.php">MCA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link user-login" href="https://su.dunite.tech/pages/ibm.php">IBM</a>
+                    <a class="nav-link user-login" href="https://dunite.tech/pages/ibm.php">IBM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link user-login" href="https://su.dunite.tech/pages/ethical-hacking.php">EH Course</a>
+                    <a class="nav-link user-login" href="https://dunite.tech/pages/ethical-hacking.php">EH Course</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link user-login" href="https://su.dunite.tech/pages/upload.php">Upload</a>
+                    <a class="nav-link user-login" href="https://dunite.tech/pages/upload.php">Upload</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link userShow" href="https://su.dunite.tech/assets/pages/user.html" aria-disabled="true"></a>
+                    <a class="nav-link userShow" href="https://dunite.tech/assets/pages/user.html" aria-disabled="true"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active p-2 py-1 mt-1" aria-current="page" href="https://su.dunite.tech/pages/compiler.php" style="border: 1px solid black; border-radius: 7px;">Compiler</a>
+                    <a class="nav-link active p-2 py-1 mt-1" aria-current="page" href="https://dunite.tech/pages/compiler.php" style="border: 1px solid black; border-radius: 7px;">Compiler</a>
                 </li>
             </ul>
         </div>
@@ -114,10 +114,10 @@
 
 <script src="https://kit.fontawesome.com/4145934b9b.js" crossorigin="anonymous"></script>
     <div class="container d-flex flex-column justify-content-center align-items-center gap-5 mt-5 p-5 p-md-5" style="min-height: 70vh; height:auto;">
-        <img src="https://su.dunite.tech/assets/svg/warning.svg" />
+        <img src="https://dunite.tech/assets/svg/warning.svg" />
         <h1 class="text-capitalize text-center error">OOPs ⊙⁠﹏⁠⊙</h1>
         <p class="err-p text-capitalize text-center error">The page you are looking for could not be found.</p>
-        <a href="https://su.dunite.tech" class="btn btn-dark">Go back</a>
+        <a href="https://dunite.tech" class="btn btn-dark">Go back</a>
       </div>
 
     <style>
@@ -158,7 +158,7 @@
                     <li><a class="link text-decoration-none hover-link" href="https://survey.dunite.tech">Survey</a></li>
                     <li><a class="link text-decoration-none hover-link" href="https://dunite.tech/contact/">Contact Us</a></li>
                     <li><a class="link text-decoration-none hover-link" href="https://www.instagram.com/l_e_sims/">l_e_sims</a></li>
-                    <li><a class="link text-decoration-none hover-link" href="https://su.dunite.tech/pages/upload.php">Upload</a></li>
+                    <li><a class="link text-decoration-none hover-link" href="https://dunite.tech/pages/upload.php">Upload</a></li>
                 </ul>
             </div>
             <div class="container d-flex flex-column justify-content-md-center  align-items-md-center justify-content-start m-md-auto text-left">
